# homehub-backend

./: .gitignore  .release-please-manifest.json  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  release-please-config.json
.github/workflows/: release-please.yml
homehub-core/: CHANGELOG.md  Cargo.toml
homehub-core/src/: lib.rs  light.rs  token.rs  user.rs
homehub-db/: CHANGELOG.md  Cargo.toml
homehub-db/migration/: Cargo.toml
homehub-db/migration/src/: lib.rs  m20240317_190601_create_base_schema.rs  m20240330_012419_add_light.rs  m20240331_095824_change_light_state.rs
homehub-db/src/: lib.rs
homehub-db/src/entities/: app_user.rs  light.rs  location.rs  mod.rs  prelude.rs  room.rs  room_light.rs  sea_orm_active_enums.rs
homehub-db/src/extra_models/: light.rs
homehub-db/src/queries/: app_user.rs  light.rs  mod.rs
homehub-models/: CHANGELOG.md  Cargo.toml
homehub-server/: CHANGELOG.md  Cargo.toml
homehub-server/src/: config.rs  main.rs  state.rs
homehub-server/src/middleware/: jwt_auth.rs
homehub-server/src/routes/: auth.rs  user.rs
