[package]
name = "homehub-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
[dependencies]
homehub-db = { path = "../homehub-db" }
tracing = { version = "0.1.40", features = ["async-await"] }
anyhow = "1.0.81"
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.37", features = ["serde"] }
thiserror = "1.0.58"
uuid = "*"
