[package]
name = "homehub-db"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1"
serde_json = "1.0.115"
url = "*"
tokio = "*"
sea-orm = { version = "^0.12.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-chrono",
  "with-json",
] }
anyhow = "*"
